# PWTUninstall

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_test.yml
src/: UninstallWorker.cpp  UninstallWorker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Resources/: resources.qrc  version.h.in
src/Resources/Windows/: win.rc.in
